Changes made by manuel otero (oteroeiras@gmail.com).

--- a/sample-notification/index.html
+++ b/sample-notification/index.html
@@ -5,7 +5,7 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="styles/main.css" />
+		<link rel="stylesheet" href="main.css" />
 		<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 		<script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
 	</head>
@@ -15,18 +15,12 @@
 		</header>
 		<div class="content">
             <div class="action-area ch70">
-                <button class="button dh" id="alertButton">Show Alert</button>
-				<button class="button dh" id="confirmButton">Show Confirm</button>
-				<button class="button dh" id="beepButton">Beep</button>
-				<button class="button dh" id="vibrateButton">Vibrate</button>
-            </div>
-			<div class="result-area ch30">
-                <div class="results"></div>
-                <div class="separator"></div>
+                <button class="button dh" id="logIn">Log In</button>
+				<button class="button dh" id="signUp">Sign Up</button>
             </div>
 		</div>
         <footer class="footer">
-		    <div>Cordova API Samples</div>
+		    <div></div>
 	    </footer>
 	</body>
 </html>
